--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://muvedeveloper01.github.io/muvemobility",
+  "homepage": "https://muvedeveloper01.github.io/muvemobility/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
