--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "homepage": "https://muvedeveloper01.github.io/muvemobility",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
-  "scripts": {
+  "type": "module",    "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
